# cryptic

./: .gitignore  Cargo.toml  README.md
src/: cli.yml  encryptor.rs  errors.rs  main.rs  password.rs
test_data/: initial.txt
