[package]
name = "cryptic"
description = "A simple encryption/decryption application. You can use this to encrypt and decrypt files using a password"
version = "0.1.1"
authors = ["Giorgos Georgiou <giorgos.georgiou@outlook.com>"]
readme = "README.md"
keywords = ["encryption", "cli"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
ring = "*"
rand = "*"
rpassword = "*"
yaml-rust = "*"
anyhow = "1.0.93"

[dependencies.clap]
version = "*"
features = ["yaml", "suggestions", "color"]
