[package]
name = "cryptic"
description = "A simple encryption/decryption application. You can use this to encrypt and decrypt files using a password"
version = "1.0.0"
authors = ["Giorgos Georgiou <giorgos.georgiou@outlook.com>"]
readme = "README.md"
keywords = ["encryption", "cli"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
ring = "0.13"
rand = "0.4"
rpassword = "0.4"
yaml-rust = "0.3"
anyhow = "1"
clap = { version = "2", features = ["yaml", "suggestions", "color"] }

[dev-dependencies]
tempfile = "3"
