[package]
name = "cryptic"
description = "A simple encryption/decryption application. You can use this to encrypt and decrypt files using a password"
version = "1.0.0"
authors = ["Giorgos Georgiou <giorgos.georgiou@outlook.com>"]
readme = "README.md"
keywords = ["encryption", "cli"]
license = "Apache-2.0"
edition = "2024"

[dependencies]
ring = "0.17"
rand = "0.8"
rpassword = "7"
anyhow = "1"
clap = { version = "4", features = ["suggestions", "color", "derive"] }

[dev-dependencies]
tempfile = "3"
